--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Shopping Site for Mobile</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -37,38 +38,41 @@
             <i class="fa-solid fa-ellipsis-vertical"></i>
         </nav>
         <div class="content">
-            <div class="show_box">
-                <div class="item item_1">
-                    <img src="https://rukminim1.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100" alt="">
-                    <h2>Kilos</h2>
-                </div>
-                <div class="item item_2">
-                    <img src="https://rukminim1.flixcart.com/flap/64/64/image/22fddf3c7da4c4f4.png?q=100" alt="">
-                    <h2>Mobile</h2>
-                </div>
-                <div class="item item_3">
-                    <img src="https://rukminim1.flixcart.com/flap/64/64/image/71050627a56b4693.png?q=100" alt="">
-                    <h2>Fashion</h2>
-                </div>
-                <div class="item">
-                    <img src="https://rukminim1.flixcart.com/fk-p-flap/64/64/image/0139228b2f7eb413.jpg?q=100" alt="">
-                    <h2>Electronics</h2>
-                </div>
-                <div class="item">
-                    <img src="https://rukminim1.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100" alt="">
-                    <h2>Home & Furniture</h2>
-                </div>
-                <div class="item">
-                    <img src="https://rukminim1.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100" alt="">
-                    <h2>Appliances</h2>
-                </div>
-                <div class="item">
-                    <img src="https://rukminim1.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100" alt="">
-                    <h2>Flight Booking</h2>
-                </div>
-                <div class="item">
-                    <img src="https://rukminim1.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100" alt="">
-                    <h2>Beauty, Toys & More</h2>
+            <div class="show_box sliders">
+                <div class="swiper-wrapper">
+                    <div class="item swiper-slide">
+                        <img src="https://rukminim1.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100" alt="">
+                        <h2>Kilos</h2>
+                    </div>
+                    <div class="item swiper-slide">
+                        <img src="https://rukminim1.flixcart.com/flap/64/64/image/22fddf3c7da4c4f4.png?q=100" alt="">
+                        <h2>Mobile</h2>
+                    </div>
+                    <div class="item swiper-slide">
+                        <img src="https://rukminim1.flixcart.com/flap/64/64/image/71050627a56b4693.png?q=100" alt="">
+                        <h2>Fashion</h2>
+                    </div>
+                    <div class="item swiper-slide">
+                        <img src="https://rukminim1.flixcart.com/fk-p-flap/64/64/image/0139228b2f7eb413.jpg?q=100"
+                            alt="">
+                        <h2>Electronics</h2>
+                    </div>
+                    <div class="item swiper-slide">
+                        <img src="https://rukminim1.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100" alt="">
+                        <h2>Home & Furniture</h2>
+                    </div>
+                    <div class="item swiper-slide">
+                        <img src="https://rukminim1.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100" alt="">
+                        <h2>Appliances</h2>
+                    </div>
+                    <div class="item swiper-slide">
+                        <img src="https://rukminim1.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100" alt="">
+                        <h2>Flight Booking</h2>
+                    </div>
+                    <div class="item swiper-slide">
+                        <img src="https://rukminim1.flixcart.com/flap/64/64/image/29327f40e9c4d26b.png?q=100" alt="">
+                        <h2>Beauty, Toys & More</h2>
+                    </div>
                 </div>
             </div>
             <div class="slider">
@@ -253,7 +257,7 @@
             </div>
             <div class="hr"></div>
             <div class="bottom">
-                    <p>&copy; 2025 Lamda Dekho. All rights reserved.</p>
+                <p>&copy; 2025 Lamda Dekho. All rights reserved.</p>
             </div>
         </footer>
     </div>
