--- a/index.html
+++ b/index.html
@@ -106,35 +106,37 @@
                         <h1>Best of Electronics</h1>
                     </div>
                     <div class="bottom">
-                        <div class="card">
-                            <img src="https://plus.unsplash.com/premium_photo-1728582543415-1e28161533c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d2F0Y2glMjB3aGl0ZSUyMGJnfGVufDB8fDB8fHww"
-                                alt="">
-                            <p>Best Truewireless hand made</p>
-                            <h2>Grab Now</h2>
-                        </div>
-                        <div class="card">
-                            <img src="https://plus.unsplash.com/premium_photo-1728582543415-1e28161533c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d2F0Y2glMjB3aGl0ZSUyMGJnfGVufDB8fDB8fHww"
-                                alt="">
-                            <p>Best Truewireless hand made</p>
-                            <h2>Grab Now</h2>
-                        </div>
-                        <div class="card">
-                            <img src="https://plus.unsplash.com/premium_photo-1728582543415-1e28161533c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d2F0Y2glMjB3aGl0ZSUyMGJnfGVufDB8fDB8fHww"
-                                alt="">
-                            <p>Best Truewireless hand made</p>
-                            <h2>Grab Now</h2>
-                        </div>
-                        <div class="card">
-                            <img src="https://plus.unsplash.com/premium_photo-1728582543415-1e28161533c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d2F0Y2glMjB3aGl0ZSUyMGJnfGVufDB8fDB8fHww"
-                                alt="">
-                            <p>Best Truewireless hand made</p>
-                            <h2>Grab Now</h2>
-                        </div>
-                        <div class="card">
-                            <img src="https://plus.unsplash.com/premium_photo-1728582543415-1e28161533c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d2F0Y2glMjB3aGl0ZSUyMGJnfGVufDB8fDB8fHww"
-                                alt="">
-                            <p>Best Truewireless hand made</p>
-                            <h2>Grab Now</h2>
+                        <div class="swiper-wrapper">
+                            <div class="card swiper-slide">
+                                <img src="https://plus.unsplash.com/premium_photo-1728582543415-1e28161533c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d2F0Y2glMjB3aGl0ZSUyMGJnfGVufDB8fDB8fHww"
+                                    alt="">
+                                <p>Best Truewireless hand made</p>
+                                <h2>Grab Now</h2>
+                            </div>
+                            <div class="card swiper-slide">
+                                <img src="https://plus.unsplash.com/premium_photo-1728582543415-1e28161533c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d2F0Y2glMjB3aGl0ZSUyMGJnfGVufDB8fDB8fHww"
+                                    alt="">
+                                <p>Best Truewireless hand made</p>
+                                <h2>Grab Now</h2>
+                            </div>
+                            <div class="card swiper-slide">
+                                <img src="https://plus.unsplash.com/premium_photo-1728582543415-1e28161533c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d2F0Y2glMjB3aGl0ZSUyMGJnfGVufDB8fDB8fHww"
+                                    alt="">
+                                <p>Best Truewireless hand made</p>
+                                <h2>Grab Now</h2>
+                            </div>
+                            <div class="card swiper-slide">
+                                <img src="https://plus.unsplash.com/premium_photo-1728582543415-1e28161533c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d2F0Y2glMjB3aGl0ZSUyMGJnfGVufDB8fDB8fHww"
+                                    alt="">
+                                <p>Best Truewireless hand made</p>
+                                <h2>Grab Now</h2>
+                            </div>
+                            <div class="card swiper-slide">
+                                <img src="https://plus.unsplash.com/premium_photo-1728582543415-1e28161533c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8d2F0Y2glMjB3aGl0ZSUyMGJnfGVufDB8fDB8fHww"
+                                    alt="">
+                                <p>Best Truewireless hand made</p>
+                                <h2>Grab Now</h2>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -144,36 +146,38 @@
                 <div class="top">
                     <h2>Beauty, Food, Toys & more</h2>
                 </div>
-                <div class="bottom">
-                    <div class="card">
-                        <img src="https://images.unsplash.com/photo-1523362628745-0c100150b504?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGJvdHRsZXxlbnwwfHwwfHx8MA%3D%3D"
-                            alt="">
-                        <p>coffee powder</p>
-                        <h2>Upto 80% Off</h2>
-                    </div>
-                    <div class="card">
-                        <img src="https://images.unsplash.com/photo-1523362628745-0c100150b504?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGJvdHRsZXxlbnwwfHwwfHx8MA%3D%3D"
-                            alt="">
-                        <p>coffee powder</p>
-                        <h2>Upto 80% Off</h2>
-                    </div>
-                    <div class="card">
-                        <img src="https://images.unsplash.com/photo-1523362628745-0c100150b504?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGJvdHRsZXxlbnwwfHwwfHx8MA%3D%3D"
-                            alt="">
-                        <p>coffee powder</p>
-                        <h2>Upto 80% Off</h2>
-                    </div>
-                    <div class="card">
-                        <img src="https://images.unsplash.com/photo-1523362628745-0c100150b504?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGJvdHRsZXxlbnwwfHwwfHx8MA%3D%3D"
-                            alt="">
-                        <p>coffee powder</p>
-                        <h2>Upto 80% Off</h2>
-                    </div>
-                    <div class="card">
-                        <img src="https://images.unsplash.com/photo-1523362628745-0c100150b504?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGJvdHRsZXxlbnwwfHwwfHx8MA%3D%3D"
-                            alt="">
-                        <p>coffee powder</p>
-                        <h2>Upto 80% Off</h2>
+                <div class="bottom bottom_slide">
+                    <div class="swiper-wrapper">
+                        <div class="card swiper-slide">
+                            <img src="https://images.unsplash.com/photo-1523362628745-0c100150b504?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGJvdHRsZXxlbnwwfHwwfHx8MA%3D%3D"
+                                alt="">
+                            <p>coffee powder</p>
+                            <h2>Upto 80% Off</h2>
+                        </div>
+                        <div class="card swiper-slide">
+                            <img src="https://images.unsplash.com/photo-1523362628745-0c100150b504?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGJvdHRsZXxlbnwwfHwwfHx8MA%3D%3D"
+                                alt="">
+                            <p>coffee powder</p>
+                            <h2>Upto 80% Off</h2>
+                        </div>
+                        <div class="card swiper-slide">
+                            <img src="https://images.unsplash.com/photo-1523362628745-0c100150b504?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGJvdHRsZXxlbnwwfHwwfHx8MA%3D%3D"
+                                alt="">
+                            <p>coffee powder</p>
+                            <h2>Upto 80% Off</h2>
+                        </div>
+                        <div class="card swiper-slide">
+                            <img src="https://images.unsplash.com/photo-1523362628745-0c100150b504?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGJvdHRsZXxlbnwwfHwwfHx8MA%3D%3D"
+                                alt="">
+                            <p>coffee powder</p>
+                            <h2>Upto 80% Off</h2>
+                        </div>
+                        <div class="card swiper-slide">
+                            <img src="https://images.unsplash.com/photo-1523362628745-0c100150b504?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTB8fGJvdHRsZXxlbnwwfHwwfHx8MA%3D%3D"
+                                alt="">
+                            <p>coffee powder</p>
+                            <h2>Upto 80% Off</h2>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -181,36 +185,38 @@
                 <div class="top">
                     <h2>Sports, Healthcare & more</h2>
                 </div>
-                <div class="bottom">
-                    <div class="card">
-                        <img src="https://plus.unsplash.com/premium_photo-1668677225829-214d58c7b73f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZHJ5JTIwZnJ1aXRzfGVufDB8fDB8fHww"
-                            alt="">
-                        <p>Dry Fruits</p>
-                        <h2>Upto 20% Off</h2>
-                    </div>
-                    <div class="card">
-                        <img src="https://plus.unsplash.com/premium_photo-1668677225829-214d58c7b73f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZHJ5JTIwZnJ1aXRzfGVufDB8fDB8fHww"
-                            alt="">
-                        <p>Dry Fruits</p>
-                        <h2>Upto 20% Off</h2>
-                    </div>
-                    <div class="card">
-                        <img src="https://plus.unsplash.com/premium_photo-1668677225829-214d58c7b73f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZHJ5JTIwZnJ1aXRzfGVufDB8fDB8fHww"
-                            alt="">
-                        <p>Dry Fruits</p>
-                        <h2>Upto 20% Off</h2>
-                    </div>
-                    <div class="card">
-                        <img src="https://plus.unsplash.com/premium_photo-1668677225829-214d58c7b73f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZHJ5JTIwZnJ1aXRzfGVufDB8fDB8fHww"
-                            alt="">
-                        <p>Dry Fruits</p>
-                        <h2>Upto 20% Off</h2>
-                    </div>
-                    <div class="card">
-                        <img src="https://plus.unsplash.com/premium_photo-1668677225829-214d58c7b73f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZHJ5JTIwZnJ1aXRzfGVufDB8fDB8fHww"
-                            alt="">
-                        <p>Dry Fruits</p>
-                        <h2>Upto 20% Off</h2>
+                <div class="bottom .sport_slider">
+                    <div class="swiper-wrapper">
+                        <div class="card swiper-slide">
+                            <img src="https://plus.unsplash.com/premium_photo-1668677225829-214d58c7b73f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZHJ5JTIwZnJ1aXRzfGVufDB8fDB8fHww"
+                                alt="">
+                            <p>Dry Fruits</p>
+                            <h2>Upto 20% Off</h2>
+                        </div>
+                        <div class="card swiper-slide">
+                            <img src="https://plus.unsplash.com/premium_photo-1668677225829-214d58c7b73f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZHJ5JTIwZnJ1aXRzfGVufDB8fDB8fHww"
+                                alt="">
+                            <p>Dry Fruits</p>
+                            <h2>Upto 20% Off</h2>
+                        </div>
+                        <div class="card swiper-slide">
+                            <img src="https://plus.unsplash.com/premium_photo-1668677225829-214d58c7b73f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZHJ5JTIwZnJ1aXRzfGVufDB8fDB8fHww"
+                                alt="">
+                            <p>Dry Fruits</p>
+                            <h2>Upto 20% Off</h2>
+                        </div>
+                        <div class="card swiper-slide">
+                            <img src="https://plus.unsplash.com/premium_photo-1668677225829-214d58c7b73f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZHJ5JTIwZnJ1aXRzfGVufDB8fDB8fHww"
+                                alt="">
+                            <p>Dry Fruits</p>
+                            <h2>Upto 20% Off</h2>
+                        </div>
+                        <div class="card swiper-slide">
+                            <img src="https://plus.unsplash.com/premium_photo-1668677225829-214d58c7b73f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZHJ5JTIwZnJ1aXRzfGVufDB8fDB8fHww"
+                                alt="">
+                            <p>Dry Fruits</p>
+                            <h2>Upto 20% Off</h2>
+                        </div>
                     </div>
                 </div>
             </div>
