--- a/index.html
+++ b/index.html
@@ -14,6 +14,31 @@
 </head>
 
 <body>
+    <div class="login_container">
+        <i class="fa-solid fa-xmark cross"></i>
+        <div class="login_form">
+            <form action="index.js">
+                <h2>Login</h2>
+                <div class="form_info">
+                    <label for="gm">Enter your Email</label>
+                    <div class="input">
+                        <input type="email" placeholder="Enter Your Gmail" id="gm" required>
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
+                    <label for="pass" class="sec_label">Enter Password</label>
+                    <div class="input">
+                        <input type="password" placeholder="Enter Your Password" id="pass" 
+                        required>
+                        <i class="fa-solid fa-unlock-keyhole"></i>
+                    </div>
+                </div>
+                <div class="button">
+                    <button class="changed_login">Login</button>
+                    <button>sign up</button>
+                </div>
+            </form>
+        </div>
+    </div>
     <div class="main">
         <nav>
             <img src="https://static-assets-web.flixcart.com/batman-returns/batman-returns/p/images/fkheaderlogo_exploreplus-44005d.svg"
@@ -22,11 +47,11 @@
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" placeholder="Search for Products, Brands and More">
             </div>
-            <div class="login">
+            <button class="login">
                 <i class="fa-solid fa-circle-user contact"></i>
                 <h2>Login</h2>
                 <i class="fa-solid fa-caret-down dropdown"></i>
-            </div>
+            </button>
             <div class="cart">
                 <i class="fa-solid fa-cart-shopping"></i>
                 <h2>Cart</h2>
@@ -269,6 +294,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="swiper.js"></script>
     <script src="index.js"></script>
 </body>
 
