--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Online Shopping Site for Mobile</title>
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="media_max_479px.css">
+    <link rel="stylesheet" href="media_max_480_to_767px.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -210,7 +212,7 @@
                 <div class="top">
                     <h2>Sports, Healthcare & more</h2>
                 </div>
-                <div class="bottom .sport_slider">
+                <div class="bottom sport_slider">
                     <div class="swiper-wrapper">
                         <div class="card swiper-slide">
                             <img src="https://plus.unsplash.com/premium_photo-1668677225829-214d58c7b73f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8ZHJ5JTIwZnJ1aXRzfGVufDB8fDB8fHww"
